# POWERSERVE_CUDA

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  1.txt  CMakeLists.txt  README.md  README_smallthinker.md  add_license.py  powerserve  pyproject.toml  requirements.txt  smartserving  smartserving.code-workspace  sync.sh
.gitlab/: common.sh  deploy_spec_to_local_phone.sh  deploy_spec_to_remote_phone.sh  deploy_to_remote_phone.sh  test-decode.sh  test-llama3.1.sh  test-mmlu.sh  test-mmmu.sh  test-ppl.sh  test-qwen2.sh  test-speculative.sh
app/: CMakeLists.txt
app/common/: cmdline.cpp  cmdline.hpp
app/perplexity/: CMakeLists.txt  main.cpp
app/run/: CMakeLists.txt  README.md  run.cpp
app/server/: CMakeLists.txt  README.md  local_server.cpp  local_server.hpp  openai_api.hpp  server.cpp  server_handler.hpp  simple_server.cpp  simple_server.hpp
app/speculative/: CMakeLists.txt  speculative.cpp
demo/: CMakeLists.txt  demo.cpp  demo_gguf.cpp  gguf.cpp  gguf.hpp  test.cpp
doc/: llama_cpp_on_android.md  readme_main.md
docs/: end_to_end.md  export_smallthinker.md  llama_cpp_on_android.md  perfetto_tracing.md
libs/: CMakeLists.txt
libs/ggml/include/: ggml.h
libs/ggml/src/: ggml.c
libs/ggml/src/ggml-cpu/: ggml-cpu.c
libs/ggml/src/vulkan-shaders/: vulkan-shaders-gen.cpp
libs/llama_tokenizer/: llama-vocab.cpp  llama-vocab.h  unicode.cpp
libs/qnn_headers/: qnn_type_macros.hpp
src/: CMakeLists.txt  common.cpp  common.hpp  debug.cpp  debug.hpp  generate.cpp  generate.hpp  llama_tokenizer.cpp  llama_tokenizer.hpp  main.cpp  model.cpp  model.hpp  sampler.cpp  sampler.hpp  tensor.cpp  tensor.hpp
src/backend/: CMakeLists.txt  backend.hpp  cpu_buffer.hpp  platform.cpp  platform.hpp
src/backend/ggml/: CMakeLists.txt  buffer.hpp  ggml.cpp  ggml.hpp  ggml_kv_cache.cpp  ggml_kv_cache.hpp  ggml_wrapper.cpp
src/backend/ggml-cuda/: CMakeLists.txt  buffer.hpp  common.hpp  ggml-cuda.cpp  ggml-cuda.hpp  ggml-cuda_kv_cache.cpp  ggml-cuda_kv_cache.hpp  interface.cu  interface.cuh
src/backend/ggml-cuda/cuda-ops/: activation.cu  activation.cuh  copy_ext.cuh  get_mask.cuh  mat_mul.cuh  rms_norm.cuh  shared_funs.cuh
src/backend/qnn/: CMakeLists.txt  causal_lm.cpp  causal_lm.hpp  causal_models.cpp  causal_models.hpp  config.hpp  graph_interface.cpp  graph_interface.hpp  qnn.cpp  qnn.hpp  qnn_backend.cpp  qnn_backend.hpp  qnn_interface.cpp  qnn_interface.hpp
src/common/: CMakeLists.txt  logger.hpp  perf.cpp  perf.hpp  type_def.hpp
src/core/: CMakeLists.txt  buffer.hpp  config.cpp  config.hpp  data_type.hpp  defines.hpp  exception.hpp  getenv.hpp  kv_cache.hpp  logger.hpp  perf.cpp  perf.hpp  perfetto_trace.cpp  perfetto_trace.hpp  tensor.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp  typedefs.hpp
src/executor/: CMakeLists.txt  executor.cpp  executor.hpp
src/graph/: CMakeLists.txt  builder.cpp  builder.hpp  graph.cpp  graph.hpp  graph.hpp.bak  node.cpp  node.hpp  node.hpp.bak  op_params.hpp  op_type.hpp  sched.cpp  sched.hpp
src/model/: CMakeLists.txt  model.hpp  model_loader.cpp  model_loader.hpp
src/model/common/: config.hpp  weights.hpp
src/model/internvl/: CMakeLists.txt  internvl_model.cpp  internvl_model.hpp  internvl_weight.hpp  process_image_internvl2.hpp
src/model/llama/: CMakeLists.txt  llama_config.hpp  llama_model.cpp  llama_model.hpp  llama_weight.hpp
src/model/llama-impl/: llama_buffer.hpp  llama_config.hpp  llama_model.cpp  llama_model.hpp  llama_weight.hpp
src/model/module/: CMakeLists.txt  attention.cpp  attention.hpp  attention_mask.cpp  attention_mask.hpp  cache.cpp  cache.hpp  ffn.cpp  ffn.hpp  kv_cache.cpp  kv_cache.hpp  module.hpp  norm_attention.cpp  norm_attention.hpp  quest_attention.cpp  quest_attention.hpp  region.hpp
src/model/phi3/: CMakeLists.txt  phi3_config.hpp  phi3_model.cpp  phi3_model.hpp  phi3_weight.hpp
src/model/qwen2/: CMakeLists.txt  qwen2_model.cpp  qwen2_model.hpp  qwen2_weight.hpp
src/model/qwen2_vl/: CMakeLists.txt  qwen2_vl_model.cpp  qwen2_vl_model.hpp
src/sampler/: CMakeLists.txt  greedy_sampler.cpp  greedy_sampler.hpp  prob_array.cpp  prob_array.hpp  sampler.cpp  sampler.hpp  sampler_chain.cpp  sampler_chain.hpp  topp_sampler.cpp  topp_sampler.hpp
src/speculative/: CMakeLists.txt  spec_model.hpp  speculator.cpp  speculator.hpp  token_tree.cpp  token_tree.hpp  tree_speculative.cpp  tree_speculative.hpp
src/storage/: CMakeLists.txt  file.hpp  file_loader.cpp  file_loader.hpp
src/storage/file_loader/: file_loader_bio.hpp  file_loader_dio.hpp  file_loader_mmap.hpp  file_loader_uv.hpp
src/tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  ggml_multithread.cpp  qnn_test.cpp  quant_mul_mat.cpp  sampler_test.cpp  tensor_view_test.cpp
tools/: CMakeLists.txt  add_license.py  cos_sim.py  format.py  generate_llama_vocab.py  gguf_export.py
tools/convert_hf_to_gguf/: requirements.txt
tools/end_to_end/: README.md  compile.sh  deploy_to_phone.bat  deploy_to_phone.sh  download.sh  end_to_end_run.sh  get_soc.sh  powerserve.py  powerserve.sh
tools/extract_embd_from_vl/: CMakeLists.txt  README.md  main.py  test.cpp
tools/gguf_config_to_json/: CMakeLists.txt  main.cpp
tools/mmlu/: mmlu_test.py
tools/mmmu_test/: mmmu_test.py
tools/parameter_search/token_tree/: common.py
tools/perpelxity/: CMakeLists.txt  main.cpp
tools/perplexity/: CMakeLists.txt  main.cpp
tools/qnn_converter/: .gitignore  README.md  Readme.md  adb_prepare.sh  build_1b.sh  build_all_layers.py  build_context_binary.py  build_shared_object.py  config.json  convert_qnn_model.sh  converter.py  export_to_onnx.py  fake_quantize.py  generate_bin.py  generate_binary.py  graph_params.py  llama_model.py  llama_model_lmhead.py  model_params.py  soc_config.py
tools/simple_qnn_test/: README.md  simple_convert_qnn.py
